--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -399,6 +399,11 @@ body {
       padding-right: 20px;
     }
   }
+  .payment-buttons {
+    margin-top: 10px;
+    padding-right: 10px;
+  }
+
 }
 
 
