--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -404,6 +404,10 @@ body {
     padding-right: 10px;
   }
 
+  .payment-buttons, .receive-button {
+    margin-top: 10px;
+    padding-right: 10px;
+  }
 }
 
 
