用户界面 - 申请退款

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -408,6 +408,12 @@ body {
     margin-top: 10px;
     padding-right: 10px;
   }
+
+  .payment-buttons, .receive-button, .refund-button {
+    margin-top: 10px;
+    padding-right: 10px;
+  }
+
 }
 
 
@@ -491,6 +497,7 @@ body {
     border-radius: 0px;
   }
 }
+
 
 
 
